  wcstoull_l, wcstoimax, wcstoumax, wcstoq, wcstouq.  Similarly, the
  following functions support binary integers prefixed by 0b or 0B as
  input to the %i format: fscanf, scanf, sscanf, vscanf, vsscanf,
  vfscanf, fwscanf, wscanf, swscanf, vfwscanf, vwscanf, vswscanf.

* PRIb* and PRIB* macros from C2X have been added to <inttypes.h>.

Deprecated and removed features, and other changes affecting compatibility:

* In the Linux kernel for the hppa/parisc architecture some of the
  MADV_XXX constants were changed to have the same values as the other
  architectures.  New programs compiled with this glibc version and which
  use the madvise call will require at least Linux kernel version 6.2,
  alternatively stable kernels from versions 6.1.6, 5.15.87, 5.10.163,
  5.4.228, 4.19.270 or 4.14.303.

* The --disable-experimental-malloc is no longer available.  The per-thread
  cache can still be disable per-application using tunables
  (glibc.malloc.tcache_count set to zero).

* The configure option --enable-tunables has been removed.  The tunable
  feature is now always enabled.

Changes to build and runtime requirements:

  [Add changes to build and runtime requirements here]

Security related changes:

  CVE-2023-25139: When the printf family of functions is called with a
  format specifier that uses an <apostrophe> (enable grouping) and a
  minimum width specifier, the resulting output could be larger than
  reasonably expected by a caller that computed a tight bound on the
  buffer size.  The resulting larger than expected output could result
  in a buffer overflow in the printf family of functions.

The following bugs are resolved with this release:

  [The release manager will add the list generated by
  scripts/list-fixed-bugs.py just before the release.]

Version 2.37

Major new features:

* The getent tool now supports the --no-addrconfig option. The output of
  getent with --no-addrconfig may contain addresses of families not